2006-12-04 [paul]	1.12.3

	1.12.3 released

2006-11-28 [paul]	1.12.2cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	1.12.2cvs2

	* debian/README.Debian
	* src/plugin.c
	* src/plugin_gtk.c
		renaming

2006-11-07 [paul]	1.12.2cvs1

	* ChangeLog
	* README
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/plugin.c
		Name change

2006-09-25 [paul]	1.12.2

	1.12.2 released

2006-09-24 [colin]	1.12.1cvs7

	* src/plugin.c
	* src/plugin_gtk.c
		Include main.h for sylpheed_is_exiting()

2006-09-23 [colin]	1.12.1cvs6

	* src/plugin.c
		Don't do gtk stuff on exit

2006-09-23 [colin]	1.12.1cvs5

	* src/plugin_gtk.c
		Don't do gtk stuff when quitting

2006-09-22 [ticho]	1.12.1cvs4

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	1.12.1cvs3

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [colin]	1.12.1cvs2

	* src/plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	1.12.1cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	1.12.1

	1.12.1 released

2006-06-06 [wwp]	1.12.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/plugin_gtk.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	1.12.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-04-07 [colin] 	1.12

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-02-12 [colin]	1.11

	* Check for mainwin before using it

2006-01-14 [colin]	1.10

	* Fix bug #883

2006-01-14 [colin]	1.9

	* HIGify buttons

2006-01-12 [colin]	1.7

	* Merge mailmbox and mailmbox_gtk
