@@ -11,3 +11,4 @@
 ( cvs diff -u -r 1.13.2.24 -r 1.13.2.25 ChangeLog;  cvs diff -u -r 1.1 -r 1.2 README;  cvs diff -u -r 1.8.2.28 -r 1.8.2.29 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/README.Debian;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 debian/changelog;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 debian/control;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/copyright;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 debian/files;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 debian/rules;  cvs diff -u -r 1.3.2.5 -r 1.3.2.6 src/Makefile.am;  cvs diff -u -r 1.4.2.11 -r 1.4.2.12 src/plugin.c;  ) > 1.12.2cvs1.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 debian/README.Debian;  cvs diff -u -r 1.4.2.12 -r 1.4.2.13 src/plugin.c;  cvs diff -u -r 1.4.2.15 -r 1.4.2.16 src/plugin_gtk.c;  ) > 1.12.2cvs2.patchset
 ( cvs diff -u -r 1.8.2.30 -r 1.8.2.31 configure.ac;  ) > 1.12.2cvs3.patchset
+( cvs diff -u -r 1.8.2.32 -r 1.8.2.33 configure.ac;  cvs diff -u -r 1.4.2.13 -r 1.4.2.14 src/plugin.c;  ) > 1.12.3cvs1.patchset
